# applikative-validierung

./: .gitignore  README.org  flake.nix  validation.cabal
src-exe/: Main.hs
src-lib/Validation/: Main.hs
