cabal-version: 2.4
name:          validation
author:        Marco Schneider
maintainer:    marco.schneider@active-group.de
version:       0.1.0.0

library
  exposed-modules: Validation.Main 
  hs-source-dirs: src-lib                    
  build-depends: base
  default-language: Haskell2010
                    
executable validation
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , validation
    hs-source-dirs:   src-exe
    default-language: Haskell2010
